--- a/src/css/preloader.css
+++ b/src/css/preloader.css
@@ -1,5 +1,5 @@
 .preloader-backdrop {
-  background: linear-gradient(90deg, #0a326d 0%, #0035b0 99.89%);
+  /* background: linear-gradient(90deg, #0a326d 0%, #0035b0 99.89%); */
   width: 100%;
   height: 100%;
   z-index: 1000;
@@ -9,20 +9,74 @@
   position: fixed;
   top: 0;
   left: 0;
+  background: linear-gradient(
+    -45deg,
+    #0b0b56,
+    #0000ff
+  );
+  background-size: 400% 400%;
+  -webkit-animation: preloaderAnimation 4s ease infinite;
+  -moz-animation: preloaderAnimation 4s ease infinite;
+  -o-animation: preloaderAnimation 4s ease infinite;
+  animation: preloaderAnimation 4s ease infinite;
+}
+
+@-webkit-keyframes preloaderAnimation {
+  0% {
+    background-position: 56% 0%;
+  }
+  50% {
+    background-position: 100% 55%;
+  }
+  100% {
+    background-position: 56% 0%;
+  }
+}
+@-moz-keyframes preloaderAnimation {
+  0% {
+    background-position: 56% 0%;
+  }
+  50% {
+    background-position: 100% 55%;
+  }
+  100% {
+    background-position: 56% 0%;
+  }
+}
+@-o-keyframes preloaderAnimation {
+  0% {
+    background-position: 56% 0%;
+  }
+  50% {
+    background-position: 100% 55%;
+  }
+  100% {
+    background-position: 56% 0%;
+  }
+}
+@keyframes preloaderAnimation {
+  0% {
+    background-position: 56% 0%;
+  }
+  50% {
+    background-position: 100% 55%;
+  }
+  100% {
+    background-position: 56% 0%;
+  }
 }
 
 .loader {
   position: absolute;
-  position: absolute;
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100px;
-  height: 100px;
+  width: 65px;
+  height: 65px;
   border-radius: 20px;
 }
 
 .done {
-    opacity: 0;
-    visibility: hidden;
+  opacity: 0;
+  visibility: hidden;
 }
