--- a/src/css/progressBar.css
+++ b/src/css/progressBar.css
@@ -1,12 +1,12 @@
 .progress-line {
   /* width: 100%; */
-  height: 10px;
+  height: 5px;
   background: rgb(2, 0, 36);
   background: linear-gradient(
     90deg,
     rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 35%,
-    rgba(0, 212, 255, 1) 100%
+    rgb(16, 16, 138) 35%,
+    rgb(55, 0, 255) 100%
   );
   position: fixed;
   top: 0;
